--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <!-- CSS personalizado -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='ganacontrol.css') }}">
+    <!-- CSS personalizado global -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/ganacontrol.css') }}">
+    <!-- CSS para botones -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/botones.css') }}">
+    <!-- CSS para refactor estético -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/refactor.css') }}">
+    <!-- CSS específico de la página -->
+    {% block page_css %}{% endblock %}
+    <!-- CSS en línea (mantener solo si es necesario) -->
     {% block extra_css %}{% endblock %}
 </head>
 <body>
