--- a/templates/pages/inicio.html
+++ b/templates/pages/inicio.html
@@ -2,6 +2,10 @@
 
 {% block title %}GanaControl - Gestión Inteligente de Ganado{% endblock %}
 
+{% block page_css %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/inicio.css') }}">
+{% endblock %}
+
 {% block content %}
     {% include 'components/carousel.html' %}
     
